@@ -2,6 +2,7 @@ build/
 build_debug
 build_arm/
 build_arm_debug/
+packaging/
 testaes/
 testoutput/
 tests_tmp/
